# lambda

./: Cargo.toml
.github/workflows/: action.yml
benches/: add.rs
dev/bench/: data.js
examples/: add  echo  hello_world  program.lc  sub
src/: compare.rs  direct_executor.rs  example_interact_programs.rs  example_programs.rs  gc_mem.rs  human_readable.rs  interact.rs  lib.rs  main.rs  memory_representation.rs  pretty.rs  program.rs  simple_env.rs
src/program/: flags.rs
tests/: add.rs
